Fix groundwater project description and reduce timeline whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1206,8 +1206,8 @@
 
     .timeline-item {
       position: relative;
-      margin-bottom: 6rem;
-      /* More space for large cards */
+      margin-bottom: 3rem;
+      /* Reduced spacing to minimize whitespace */
       width: 50%;
       z-index: 2;
       box-sizing: border-box;
